--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -40,7 +40,7 @@ jobs:
           credentials_json: '${{ env.GKE_SA_KEY }}'
 
       - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0
         with:
           service_account_key: $GKE_SA_KEY
           project_id: $GKE_PROJECT
