--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -14,32 +14,11 @@ jobs:
   setup-build-publish-deploy:
     name: Deploy Manifests
     runs-on: ubuntu-latest
-    environment: ${{  github.base_ref == 'refs/heads/develop' && 'development' || 'staging' }}
-
+    environment: development
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v0'
-        with:
-          credentials_json: '${{ env.GKE_SA_KEY }}'
-
-      - name: gcloud Setup
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          service_account_key: ${{ env.GKE_SA_KEY }}
-          project_id: ${{ env.GKE_PROJECT }}
-          export_default_credentials: true
-
-      - name: GKE Cluster Connection
-        uses: google-github-actions/get-gke-credentials@v0.2.1
-        with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
-          credentials: ${{ env.GKE_SA_KEY }}
-
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s-prod
-          kubectl get services -o wide
+          echo: ${{  github.base_ref == 'refs/heads/develop' && 'development' || 'staging' }}
+          echo: ${{  github.base_ref }}
+          echo: ${{"Base ref is $GITHUB_BASE_REF"}}
