--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -14,16 +14,32 @@ jobs:
   setup-build-publish-deploy:
     name: Deploy Manifests
     runs-on: ubuntu-latest
-    environment: development
-    
+    environment: ${{  github.ref == 'develop' && 'development' || 'staging' }}
+
     steps:
-      - name: Branch Name
-        shell: bash
-        run: |
-          echo "GH_REPO: $GH_REPO"
-          echo "GH_PR_SHA: $GH_PR_SHA"
-          echo "GH_HR: $GH_HR"
-          echo "GH_BR: $GH_BR"
-        env:
-          GH_REPO: ${{ github.repository }}
-          GH_REF: ${{ github.ref }}
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ env.GKE_SA_KEY }}'
+
+      - name: gcloud Setup
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_key: ${{ env.GKE_SA_KEY }}
+          project_id: ${{ env.GKE_PROJECT }}
+          export_default_credentials: true
+
+      - name: GKE Cluster Connection
+        uses: google-github-actions/get-gke-credentials@v0.2.1
+        with:
+          cluster_name: ${{ env.GKE_CLUSTER }}
+          location: ${{ env.GKE_ZONE }}
+          credentials: ${{ env.GKE_SA_KEY }}
+
+      - name: Deploy
+        run: |-
+          kubectl apply -f infra/k8s-prod
+          kubectl get services -o wide
