--- a/.github/workflows/tests-tickets.yaml
+++ b/.github/workflows/tests-tickets.yaml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build:
-    name: Tickets Unit Tests
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
