--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -24,6 +24,7 @@ env:
   GKE_ZONE: ${{ secrets.GKE_ZONE }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  DOCKER_TAG: ${{ github.ref == 'refs/heads/develop' && 'dev' || 'prod'}}
 
 jobs:
   setup-build-publish-deploy:
@@ -37,9 +38,9 @@ jobs:
 
       - name: Build Image & Push to Docker Hub
         run: |-
-          cd auth && docker build -t ptavarez/auth .
+          cd auth && docker build -t ptavarez/auth:${{  env.DOCKER_TAG }} .
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker push ptavarez/auth
+          docker push ptavarez/auth:${{  env.DOCKER_TAG }}
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
