--- a/infra/k8s-prod/auth-depl.yaml
+++ b/infra/k8s-prod/auth-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: ptavarez/auth
+          image: ptavarez/auth:${{ github.ref == 'refs/heads/develop' && 'dev' || 'prod'}}
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
