--- a/.github/workflows/tests-generic.yaml
+++ b/.github/workflows/tests-generic.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Generic CI
 on:
   pull_request:
     paths-ignore:
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - run: 'echo "No build required" '
