--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -5,7 +5,7 @@ on:
     branches: [develop, main]
     paths:
       - 'auth/**'
-  
+
   workflow_dispatch:
     inputs:
       logLevel:
@@ -34,13 +34,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - name: Run npm install
         run: cd auth && npm install
-        
+
       - name: Run Unit Tests
         run: cd auth && npm run test:ci
-    
+
   setup-build-publish-deploy:
     name: Build Auth Image and Deploy to GKE
     runs-on: ubuntu-latest
@@ -78,6 +78,9 @@ jobs:
 
       - name: Deploy
         run: |-
-          kubectl apply -f infra/k8s-prod/auth-depl.yaml
+          CLUSTER_ENV=${{ github.ref == 'refs/heads/develop' && 'dev' || 'prod'}} 
+          envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
+          cat auth-depl.yaml
+          kubectl apply -f auth-depl.yaml
           kubectl rollout restart deployment auth-depl
           kubectl get services -o wide
