--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -55,5 +55,8 @@ jobs:
 
       - name: Deploy
         run: |-
+          envsubst < infra/auth-depl.yaml.template > auth-depl.yaml
+          cat auth-depl.yaml
+          kubectl apply -f auth-depl.yaml
           kubectl apply -f infra/k8s-prod
           kubectl get services -o wide
